--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack",
-    "deploy": "webpack --config webpack.production.config.js",
+    /*"deploy": "webpack --config webpack.production.config.js",*/
+    "deploy": "gh-pages -d build",
     "test": "eslint ./src/**/**.js"
   },
   "license": "MIT",
