--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "PhaserES6Webpack",
   "version": "1.0.0",
   "description": "",
-  "author": "leandro cabrera <leandcabrera@gmail.com>",
+  "author": "QWERTY",
   "main": "index.js",
   "scripts": {
     "dev": "webpack",
-    /*"deploy": "webpack --config webpack.production.config.js",*/
     "deploy": "gh-pages -d build",
     "test": "eslint ./src/**/**.js"
   },
